src/tests/ci/assignment_2_types_variables/valid/03_const_init.c
int main() {
    const int x = 5;
    return x;
}
