src/tests/ci/assignment_2_types_variables/invalid_semantic/10_dereference_non_pointer.c
int main() {
    int x = 5;
    returnx;
}
